Mobile menu z-index fix

--- a/themes/notepad/css/main.css
+++ b/themes/notepad/css/main.css
@@ -87,6 +87,7 @@ main {
   -moz-transform: translate3d(0, 0, 0);
   -o-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
+  z-index: 2;
 }
 
 /* Header */
